<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/rte">

    <TextView android:text="@string/app_created" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/abc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_started"
        android:id="@+id/def"
        android:layout_below="@+id/abc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ghi"
        android:layout_below="@+id/def"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:text="@string/app_restarted"
        android:password="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_resumed"
        android:id="@+id/jkl"
        android:layout_below="@+id/ghi"
        android:layout_alignRight="@+id/abc"
        android:layout_alignEnd="@+id/abc"
        android:layout_marginTop="41dp"
        android:linksClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_paused"
        android:id="@+id/mno"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/def"
        android:layout_alignEnd="@+id/def" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_stopped"
        android:id="@+id/pqr"
        android:layout_below="@+id/mno"
        android:layout_alignRight="@+id/jkl"
        android:layout_alignEnd="@+id/jkl"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_destroyed"
        android:id="@+id/str"
        android:layout_below="@+id/pqr"
        android:layout_alignRight="@+id/abc"
        android:layout_alignEnd="@+id/abc"
        android:layout_marginTop="41dp" />

</RelativeLayout>
